# bazel_pip_install_issue

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  requirements.txt  requirements_lock.txt  test.py
